Update internal structure

--- a/scripts/draft_example.ipynb
+++ b/scripts/draft_example.ipynb
@@ -3,22 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protected-decrease",
+   "id": "artificial-fountain",
    "metadata": {},
    "outputs": [],
    "source": [
     "from weldx.measurement import MeasurementChain, Error\n",
-    "from weldx import MathematicalExpression"
+    "from weldx import MathematicalExpression\n",
+    "from weldx import Q_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "direct-omaha",
+   "id": "democratic-document",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc = MeasurementChain(name=\"Current measurement chain\", \n",
+    "mc = MeasurementChain.from_parameters(name=\"Current measurement chain\", \n",
     "                           source_name=\"Current Sensor\", \n",
     "                           source_error=Error(13.37), \n",
     "                           output_signal_type=\"analog\", \n",
@@ -28,34 +29,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innovative-number",
+   "id": "unknown-orchestra",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc.add_transformation(\"AD conversion current measurement\", \n",
+    "mc.create_transformation(\"AD conversion current measurement\", \n",
     "                      error=Error(0.97), \n",
-    "                      func=MathematicalExpression(\"a*x+b\"),\n",
-    "                      output_signal_type=\"digital\", \n",
-    "                      output_signal_unit = \"\")"
+    "                      func=MathematicalExpression(\"a*x+b\",parameters={\"a\":Q_(1,\"1/V\"), \"b\":Q_(1,\"\")}),\n",
+    "                      output_signal_type=\"digital\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "million-georgia",
+   "id": "adequate-river",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc.add_transformation(\"Calibration\", \n",
-    "                      error=Error(0.1), \n",
-    "                      output_signal_type=\"digital\", \n",
-    "                      output_signal_unit = \"A\")"
+    "mc.create_transformation(\"Calibration\", \n",
+    "                      error=Error(0.1),\n",
+    "                      func=MathematicalExpression(\"a*x\",parameters={\"a\":Q_(1,\"A\")}),\n",
+    "                      output_signal_type=\"digital\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ultimate-reproduction",
+   "id": "trying-stations",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civilian-straight",
+   "id": "medical-mistake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confidential-judgment",
+   "id": "unsigned-estimate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adult-restaurant",
+   "id": "tight-initial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ranking-class",
+   "id": "every-luxury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comfortable-marble",
+   "id": "velvet-newton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,11 +116,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "romance-immune",
+   "id": "alternative-rescue",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_2 = MeasurementChain(name=\"Other measurement chain\", \n",
+    "mc_2 = MeasurementChain.from_parameters(name=\"Other measurement chain\", \n",
     "                           source_name=\"Current Sensor\", \n",
     "                           source_error=Error(13.3), \n",
     "                           output_signal_type=\"analog\", \n",
@@ -130,31 +130,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "saving-finland",
+   "id": "exact-prospect",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    mc_2.attach_transformation(trf_cal)\n",
-    "except ValueError as e:\n",
-    "    print(e)"
+    "#try:\n",
+    "#    mc_2.add_transformation(trf_cal)\n",
+    "#except ValueError as e:\n",
+    "#    print(e)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legitimate-therapy",
+   "id": "robust-oasis",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_2.attach_transformation(mc.get_transformation(\"AD conversion current measurement\"))\n",
-    "mc_2.attach_transformation(trf_cal)"
+    "mc_2.add_transformation(mc.get_transformation(\"AD conversion current measurement\"))\n",
+    "mc_2.add_transformation(trf_cal)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "numerical-shepherd",
+   "id": "early-cruise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "young-nicaragua",
+   "id": "cognitive-camera",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprising-direction",
+   "id": "geological-implementation",
    "metadata": {},
    "outputs": [],
    "source": []
