--- a/scripts/measurement_chain_with_equipment.ipynb
+++ b/scripts/measurement_chain_with_equipment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dedicated-simple",
+   "id": "handled-bridges",
    "metadata": {
     "tags": []
    },
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thick-semester",
+   "id": "taken-thousand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +38,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proof-cambodia",
+   "id": "present-respondent",
    "metadata": {},
    "outputs": [],
    "source": [
     "AD_current = SignalTransformation(\"AD conversion current measurement\",\n",
     "                                 error=Error(Q_(0, \"percent\")),\n",
-    "                                 input_signal=Signal(signal_type=\"analog\",\n",
-    "                                                     unit=\"V\"),\n",
-    "                                 output_signal=Signal(signal_type=\"digital\",\n",
-    "                                                      unit=\"\",\n",
-    "                                                      data = [10,12,13]),\n",
     "                                 func=MathematicalExpression(expression=\"a*x+b\",\n",
     "                                                             parameters=dict(a=Q_(1,\"1/V\"),\n",
     "                                                                             b=Q_(1,\"\"))\n",
@@ -56,39 +51,24 @@
     "                                 )\n",
     "AD_voltage = SignalTransformation(\"AD conversion voltage measurement\",\n",
     "                                 error=Error(Q_(0.2, \"percent\")),\n",
-    "                                 input_signal=Signal(signal_type=\"analog\",\n",
-    "                                                     unit=\"V\"),\n",
-    "                                 output_signal=Signal(signal_type=\"digital\",\n",
-    "                                                      unit=\"\",\n",
-    "                                                      data = [-10,-12,-13]),\n",
-    "                                  func=MathematicalExpression(expression=\"a*x+b\",\n",
-    "                                                  parameters=dict(a=Q_(1,\"1/V\"),\n",
-    "                                                                  b=Q_(1,\"\"))\n",
+    "                                 func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                             parameters=dict(a=Q_(1,\"1/V\"),\n",
+    "                                                                             b=Q_(1,\"\"))\n",
     "                                                 )\n",
     "                                 )\n",
     "\n",
     "calibration_current = SignalTransformation(\"Current measurement calibration\",\n",
     "                                 error=Error(Q_(1.2, \"percent\")),\n",
-    "                                 input_signal=Signal(signal_type=\"digital\",\n",
-    "                                                     unit=\"\"),\n",
-    "                                 output_signal=Signal(signal_type=\"digital\",\n",
-    "                                                      unit=\"A\",\n",
-    "                                                      data = [100,102,103]),\n",
-    "                                  func=MathematicalExpression(expression=\"a*x+b\",\n",
-    "                                                  parameters=dict(a=Q_(1,\"\"),\n",
-    "                                                                  b=Q_(1,\"\"))\n",
+    "                                 func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                             parameters=dict(a=Q_(1,\"A\"),\n",
+    "                                                                             b=Q_(1,\"A\"))\n",
     "                                                 )\n",
     "                                 )\n",
     "calibration_voltage = SignalTransformation(\"Voltage measurement calibration\",\n",
     "                                 error=Error(Q_(0.7, \"percent\")),\n",
-    "                                 input_signal=Signal(signal_type=\"digital\",\n",
-    "                                                     unit=\"\"),\n",
-    "                                 output_signal=Signal(signal_type=\"digital\",\n",
-    "                                                      unit=\"V\", \n",
-    "                                                      data = [-100,-102,-103]),\n",
-    "                                  func=MathematicalExpression(expression=\"a*x+b\",\n",
-    "                                                  parameters=dict(a=Q_(1,\"V\"),\n",
-    "                                                                  b=Q_(1,\"V\"))\n",
+    "                                 func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                             parameters=dict(a=Q_(1,\"V\"),\n",
+    "                                                                             b=Q_(1,\"V\"))\n",
     "                                                 )\n",
     "                                 )"
    ]
@@ -96,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moved-vatican",
+   "id": "certain-nature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "steady-installation",
+   "id": "breeding-continent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,19 +99,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quick-basics",
+   "id": "superior-vietnam",
    "metadata": {},
    "outputs": [],
    "source": [
     "mc_current = MeasurementChain.construct_from_equipment(\"Current Measurement Chain\", equipment, \"Current measurement\")\n",
     "mc_current.add_transformation_from_equipment(equipment, transformation_name=\"AD conversion current measurement\")\n",
-    "mc_current.add_transformation_from_equipment(equipment, transformation_name=\"Current measurement calibration\")"
+    "mc_current.add_transformation_from_equipment(equipment, transformation_name=\"Current measurement calibration\",data=[3,3,3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caring-portugal",
+   "id": "convenient-prize",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protected-balance",
+   "id": "adaptive-publicity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mental-perfume",
+   "id": "dependent-community",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invisible-princeton",
+   "id": "african-maldives",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,17 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accompanied-consensus",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mc_current.get_signal_data(\"AD conversion current measurement\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "documented-peace",
+   "id": "textile-order",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "subtle-revolution",
+   "id": "posted-voice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "italic-vintage",
+   "id": "insured-director",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moderate-integration",
+   "id": "micro-conclusion",
    "metadata": {},
    "source": [
     "# Stuff that keeps users from making errors"
@@ -221,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleasant-enhancement",
+   "id": "least-turning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "union-raising",
+   "id": "convertible-straight",
    "metadata": {
     "tags": []
    },
@@ -243,11 +213,6 @@
     "try:\n",
     "    SignalTransformation(\"Voltage measurement calibration\",\n",
     "                         error=Error(Q_(0.7, \"percent\")),\n",
-    "                         input_signal=Signal(signal_type=\"digital\",\n",
-    "                                             unit=\"A\"),\n",
-    "                         output_signal=Signal(signal_type=\"digital\",\n",
-    "                                              unit=\"V\", \n",
-    "                                              data = [-100,-102,-103]),\n",
     "                         func=MathematicalExpression(expression=\"a*x+b\",\n",
     "                                                     parameters=dict(a=Q_(1,\"V\"),\n",
     "                                                                     b=Q_(1,\"V\")))\n",
@@ -259,18 +224,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "basic-rebel",
+   "id": "arbitrary-niger",
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
     "    SignalTransformation(\"Voltage measurement calibration\",\n",
     "                         error=Error(Q_(0.7, \"percent\")),\n",
-    "                         input_signal=Signal(signal_type=\"digital\",\n",
-    "                                             unit=\"A\"),\n",
-    "                         output_signal=Signal(signal_type=\"digital\",\n",
-    "                                              unit=\"V/s\", \n",
-    "                                              data = [-100,-102,-103]),\n",
     "                         func=MathematicalExpression(expression=\"a*x+b\",\n",
     "                                                     parameters=dict(a=Q_(1,\"V/A\"),\n",
     "                                                                     b=Q_(1,\"V\")))\n",
@@ -282,7 +242,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "noble-enlargement",
+   "id": "legitimate-detection",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_current._graph.nodes[\"AD conversion current measurement\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "administrative-plain",
    "metadata": {},
    "outputs": [],
    "source": []
