--- a/scripts/measurement_chain_with_equipment.ipynb
+++ b/scripts/measurement_chain_with_equipment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handled-bridges",
+   "id": "protective-benchmark",
    "metadata": {
     "tags": []
    },
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "taken-thousand",
+   "id": "demanding-keeping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "present-respondent",
+   "id": "cardiac-abortion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "certain-nature",
+   "id": "mobile-speaking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "breeding-continent",
+   "id": "agreed-tunnel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,11 +99,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "superior-vietnam",
+   "id": "cross-cedar",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_current = MeasurementChain.construct_from_equipment(\"Current Measurement Chain\", equipment, \"Current measurement\")\n",
+    "mc_current = MeasurementChain.from_equipment(\"Current Measurement Chain\", equipment, \"Current measurement\")\n",
     "mc_current.add_transformation_from_equipment(equipment, transformation_name=\"AD conversion current measurement\")\n",
     "mc_current.add_transformation_from_equipment(equipment, transformation_name=\"Current measurement calibration\",data=[3,3,3])"
    ]
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convenient-prize",
+   "id": "middle-holly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,11 +121,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adaptive-publicity",
+   "id": "cheap-psychology",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_voltage = MeasurementChain.construct_from_equipment(\"Voltage Measurement Chain\", equipment, \"Voltage measurement\")\n",
+    "mc_voltage = MeasurementChain.from_equipment(\"Voltage Measurement Chain\", equipment, \"Voltage measurement\")\n",
     "mc_voltage.add_transformation_from_equipment(equipment, transformation_name=\"AD conversion voltage measurement\")\n",
     "mc_voltage.add_transformation_from_equipment(equipment, transformation_name=\"Voltage measurement calibration\")"
    ]
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dependent-community",
+   "id": "short-adams",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "african-maldives",
+   "id": "illegal-uruguay",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "textile-order",
+   "id": "static-correction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "posted-voice",
+   "id": "registered-anxiety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "insured-director",
+   "id": "sublime-respect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "micro-conclusion",
+   "id": "interior-bowling",
    "metadata": {},
    "source": [
     "# Stuff that keeps users from making errors"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "least-turning",
+   "id": "behavioral-frost",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convertible-straight",
+   "id": "individual-surrey",
    "metadata": {
     "tags": []
    },
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arbitrary-niger",
+   "id": "instructional-success",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legitimate-detection",
+   "id": "outside-personality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "administrative-plain",
+   "id": "initial-creation",
    "metadata": {},
    "outputs": [],
    "source": []
