use WeldxFile in custom_metadata.ipynb

--- a/tutorials/custom_metadata.ipynb
+++ b/tutorials/custom_metadata.ipynb
@@ -69,7 +69,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's look at the ASDF file contents with our metadata:"
+    "Now let's look at the ASDF file contents with our metadata. We will find our data\n",
+    "at the very end after the ASDF header."
    ]
   },
   {
@@ -78,10 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.asdf.util import _write_buffer, notebook_fileprinter\n",
-    "\n",
-    "buffer = _write_buffer({\"sensor\": HKS_sensor})\n",
-    "notebook_fileprinter(buffer)"
+    "from weldx import WeldxFile\n",
+    "file = WeldxFile(tree={\"sensor\": HKS_sensor})\n",
+    "file.show_asdf_header()"
    ]
   },
   {
@@ -104,9 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.asdf.util import _read_buffer\n",
+    "data = WeldxFile(file.write_to())\n",
     "\n",
-    "data = _read_buffer(buffer)\n",
     "display(data[\"sensor\"].wx_metadata)\n",
     "display(data[\"sensor\"].wx_user)"
    ]
