Add missing information to tutorial

--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -467,6 +467,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Also note, that all functions that let you create a measurement chain or add a transformation provide an extra parameter to add the corresponding data.\n",
+    "\n",
     "Finally, if you want to access the stored data, we can use `get_signal_data`.\n",
     "As for the `add_signal_data` function, you get the data from the last transformation if you don't specify any sourco or transformation name:"
    ]
