Fix measurement notebook

--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -71,9 +71,8 @@
    "source": [
     "I_ts = util.sine(f=Q_(10, \"1/s\"), amp=Q_(20, \"A\"), bias=Q_(300, \"A\"))\n",
     "I = I_ts.interp_time(time)\n",
-    "I[\"time\"] = I[\"time\"]+pd.Timestamp(\"2020-01-01\")\n",
     "\n",
-    "current_data = msm.Data(name=\"Welding current\", data=I)\n",
+    "current_data = weldx.TimeSeries(data=I.data, time=time)\n",
     "current_data"
    ]
   },
@@ -85,9 +84,8 @@
    "source": [
     "U_ts = util.sine(f=Q_(10, \"1/s\"), amp=Q_(3, \"V\"), bias=Q_(40, \"V\"), phase=Q_(0.1, \"rad\"))\n",
     "U = U_ts.interp_time(time)\n",
-    "U[\"time\"] = U[\"time\"]+pd.Timestamp(\"2020-01-01\")\n",
     "\n",
-    "voltage_data = msm.Data(name=\"Welding voltage\", data=U)\n",
+    "voltage_data = weldx.TimeSeries(data=U.data, time=time)\n",
     "voltage_data"
    ]
   },
@@ -95,6 +93,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> todo: rewrite after discussing this with the group\n",
+    "\n",
     "It is important to note the type and structure of the `current_data` and `voltage_data` datasets:\n",
     "\n",
     "- they are created as `xarray.DataArrays`\n",
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "welding_current_chain = msm.MeasurementChain(\n",
+    "welding_current_chain = msm.MeasurementChain.from_parameters(\n",
     "    name=\"welding current measurement chain\",\n",
     "    source_name=\"Current Sensor\",\n",
     "    output_signal_type=\"analog\", \n",
@@ -231,7 +231,7 @@
     "#    error=msm.Error(Q_(0.01, \"percent\")),\n",
     "#    func=current_AD_func,\n",
     "#)\n",
-    "welding_current_chain.add_transformation(\n",
+    "welding_current_chain.create_transformation(\n",
     "    name=\"AD conversion current measurement\",\n",
     "    output_signal_type=\"digital\",\n",
     "    output_signal_unit=\"\",\n",
@@ -310,14 +310,14 @@
     "# todo:\n",
     "# - add signal data parameter?\n",
     "# - add meta data\n",
-    "welding_current_chain.add_transformation(\n",
+    "welding_current_chain.create_transformation(\n",
     "    name=\"Calibration current measurement\",\n",
     "    output_signal_type=\"digital\",\n",
     "    output_signal_unit=\"A\",\n",
     "    error=msm.Error(0.0),\n",
     "    func=current_calib_func\n",
     ")\n",
-    "welding_current_chain.add_signal_data(current_data.name, current_data.data)"
+    "welding_current_chain.add_signal_data(current_data)"
    ]
   },
   {
@@ -370,7 +370,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "welding_voltage_chain = msm.MeasurementChain(\n",
+    "welding_voltage_chain = msm.MeasurementChain.from_parameters(\n",
     "    name=\"welding voltage measurement\",\n",
     "    source_name=\"Voltage Sensor\",\n",
     "    output_signal_type=\"analog\",\n",
@@ -394,7 +394,7 @@
     "#    func=voltage_ad_func,\n",
     "#)\n",
     "\n",
-    "welding_voltage_chain.add_transformation(\n",
+    "welding_voltage_chain.create_transformation(\n",
     "    name=\"AD conversion voltage measurement\",\n",
     "    output_signal_type=\"digital\",\n",
     "    output_signal_unit=\"\",\n",
@@ -419,14 +419,14 @@
     "#)\n",
     "\n",
     "# todo: add meta\n",
-    "welding_voltage_chain.add_transformation(\n",
+    "welding_voltage_chain.create_transformation(\n",
     "    name=\"Calibration voltage measurement\",\n",
     "    output_signal_type=\"digital\",\n",
     "    output_signal_unit=\"V\",\n",
     "    error=msm.Error(0.0),\n",
     "    func=voltage_calib_func\n",
     ")\n",
-    "welding_voltage_chain.add_signal_data(voltage_data.name, voltage_data.data)\n",
+    "welding_voltage_chain.add_signal_data(voltage_data)\n",
     "\n",
     "#welding_voltage_chain = msm.MeasurementChain(\n",
     "#    name=\"welding voltage measurement chain\",\n",
@@ -529,6 +529,13 @@
    "source": [
     "data = weldx.asdf.util._read_buffer(buffer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
