Clean up function ordering

--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -17,6 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# `MeasurementChain` Tutorial\n",
     "\n",
     "## Overview\n",
     "\n",
