Rename a class member

--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -274,7 +274,7 @@
    "outputs": [],
    "source": [
     "source_eq = GenericEquipment(\"Source 2000\", sources=[source_2])\n",
-    "transformation_eq = GenericEquipment(\"Transformator X3\", data_transformations=[transformation_3])"
+    "transformation_eq = GenericEquipment(\"Transformator X3\", transformations=[transformation_3])"
    ]
   },
   {
