--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -21,11 +21,15 @@
     "\n",
     "## Overview\n",
     "\n",
-    "Aquiring experimental data is a process that usually involves multiple substeps. For example, during a temperature measurement we might have a sensor that produces a voltage correlating with the current temperature. If the produced voltage signal is analog, we need to convert it into a digital one to process it on our computer. Since we wanted to know the temperature and not some arbitrary voltage, we also need to transform the voltage data into temperature data by utilizing the calibration of our sensor. \n",
+    "Acquiring experimental data is a process that usually involves multiple substeps. For example, during a temperature measurement we might have a sensor that produces a voltage correlating with the current temperature.\n",
+    "If the produced voltage signal is analog, we need to convert it into a digital one to process it on our computer.\n",
+    "Since we wanted to know the temperature and not some arbitrary voltage, we also need to transform the voltage data into temperature data by utilizing the calibration of our sensor.\n",
     "\n",
-    "A quality assesment for a set of experimental data is only possible if we know about the involved substeps and the possible errors they might introduce. As long as we do not have detailed documentation about the measurement procedure, only the persons involved in the experiment have this knowledge.\n",
+    "A quality assessment for a set of experimental data is only possible if we know about the involved substeps and the possible errors they might introduce.\n",
+    "As long as we do not have detailed documentation about the measurement procedure, only the persons involved in the experiment have this knowledge.\n",
     "\n",
-    "The `MeasurementChain` class introduced in this tutorial is meant to provide this kind of documentation. We will discuss the different methods to construct a `MeasurementChain` and the features it offers.\n",
+    "The `MeasurementChain` class introduced in this tutorial is meant to provide this kind of documentation.\n",
+    "We will discuss the different methods to construct a `MeasurementChain` and the features it offers.\n",
     "\n",
     "## Construction without additional classes\n",
     "\n",
@@ -39,7 +43,7 @@
     "- The type of the source signal (analog or digital)\n",
     "- The unit of the source signal\n",
     "\n",
-    "Optionally, one can also provide the accociated measurement data, if it was recorded, but we will discuss this in a later section. Let's start by creation our first measurement chain:"
+    "Optionally, one can also provide the associated measurement data, if it was recorded, but we will discuss this in a later section. Let's start by creation our first measurement chain:"
    ]
   },
   {
@@ -119,7 +123,7 @@
     "\n",
     "## Plotting measurement chains\n",
     "\n",
-    "Now that we have created our first measurement chain without any exceptions, we might want to verify that everything is specified correctly. To do so, we can use pythons `print` command to check all variables, but this would be a bit tedious. A more convinient way is to use the plot function of the `MeasurementChain`.\n"
+    "Now that we have created our first measurement chain without any exceptions, we might want to verify that everything is specified correctly. To do so, we can use pythons `print` command to check all variables, but this would be a bit tedious. A more convenient way is to use the plot function of the `MeasurementChain`.\n"
    ]
   },
   {
@@ -139,7 +143,7 @@
     "\n",
     "## Construction from dedicated classes\n",
     "\n",
-    "The first method we demonstrated required you to provide a lot of parameters. While this is method is very explicit and doesn't involve many other classes, it is not be the best approach if you wan't to share sources and transformations with other measurement chains or objects. To share information about a source or transformation, two dedicated container classes are available, `SignalSource` and `SignalTransformation`.\n",
+    "The first method we demonstrated required you to provide a lot of parameters. While this is method is very explicit and doesn't involve many other classes, it is not be the best approach if you want to share sources and transformations with other measurement chains or objects. To share information about a source or transformation, two dedicated container classes are available, `SignalSource` and `SignalTransformation`.\n",
     "\n",
     "A `SignalSource` can be generated as follows:"
    ]
@@ -261,7 +265,7 @@
     "\n",
     "The sources and transformations of a measurement chain are often tied to a certain piece of laboratory equipment. \n",
     "The weldx package offers the `GenericEquipment` structure to describe your equipment and collect all the operations it performs inside of a measurement chain.\n",
-    "Since lab equipment usually does't change frequently, a good approach would be to define all your instruments and once and reuse their definitions when creating a new WelDX file.\n",
+    "Since lab equipment usually doesn't change frequently, a good approach would be to define all your instruments and once and reuse their definitions when creating a new WelDX file.\n",
     "The `MeasurementChain` supports this by letting you a create new instances using `from_equipment` and adding transformations with `add_transformation_from_equipment`.\n",
     "\n",
     "Let us create two pieces of equipment and create a new `MeasurementChain` from it:"
@@ -274,7 +278,7 @@
    "outputs": [],
    "source": [
     "source_eq = GenericEquipment(\"Source 2000\", sources=[source_2])\n",
-    "transformation_eq = GenericEquipment(\"Transformator X3\", transformations=[transformation_3])"
+    "transformation_eq = GenericEquipment(\"Transformer X3\", transformations=[transformation_3])"
    ]
   },
   {
@@ -471,7 +475,7 @@
     "Also note, that all functions that let you create a measurement chain or add a transformation provide an extra parameter to add the corresponding data.\n",
     "\n",
     "Finally, if you want to access the stored data, we can use `get_signal_data`.\n",
-    "As for the `add_signal_data` function, you get the data from the last transformation if you don't specify any sourco or transformation name:"
+    "As for the `add_signal_data` function, you get the data from the last transformation if you don't specify any source or transformation name:"
    ]
   },
   {
@@ -496,7 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_1.get_signal_data(\"Thermocouple 1\")"
+    "mc_1.get_signal_data(\"Thermocouple 1\") "
    ]
   }
  ],
