Add new properties

--- a/tutorials/measurement_chain.ipynb
+++ b/tutorials/measurement_chain.ipynb
@@ -395,6 +395,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "One can also get a list of all signals and transformations with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_3.signals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_3.transformations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Attaching data\n",
     "\n",
     "The goal of the `MeasurementChain` class is to describe as detailed as possible how experimental data is acquired.\n",
