be clear  on returned type

--- a/tutorials/custom_metadata.ipynb
+++ b/tutorials/custom_metadata.ipynb
@@ -92,10 +92,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = WeldxFile(file.write_to())\n",
+    "in_memory_file = WeldxFile(file.write_to())\n",
     "\n",
-    "display(data[\"sensor\"].wx_metadata)\n",
-    "display(data[\"sensor\"].wx_user)"
+    "display(in_memory_file[\"sensor\"].wx_metadata)\n",
+    "display(in_memory_file[\"sensor\"].wx_user)"
    ]
   }
  ],
